crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_`__iter__`_does_not_return_an_iterator.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - `__iter__` does not return an iterator
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import reveal_type
2 | 
3 | class Bad:
4 |     def __iter__(self) -> int:
5 |         return 42
6 | 
7 | # error: [not-iterable]
8 | for x in Bad():
9 |     reveal_type(x)  # revealed: Unknown
```

# Diagnostics

```
error: lint:not-iterable
 --> /src/mdtest_snippet.py:8:10
  |
7 | # error: [not-iterable]
8 | for x in Bad():
  |          ^^^^^ Object of type `Bad` is not iterable because its `__iter__` method returns an object of type `int`, which has no `__next__` method
9 |     reveal_type(x)  # revealed: Unknown
  |

```

```
info: revealed-type
 --> /src/mdtest_snippet.py:9:5
  |
7 | # error: [not-iterable]
8 | for x in Bad():
9 |     reveal_type(x)  # revealed: Unknown
  |     ^^^^^^^^^^^^^^ Revealed type is `Unknown`
  |

```
